--- a/backend/app/build.gradle
+++ b/backend/app/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security' 
     implementation 'com.auth0:java-jwt:4.4.0'
-
+    implementation 'at.favre.lib:bcrypt:0.10.1'
     runtimeOnly 'com.mysql:mysql-connector-j'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
