--- a/backend/app/bin/main/application-dev.yaml
+++ b/backend/app/bin/main/application-dev.yaml
@@ -12,4 +12,4 @@ spring:
     show-sql: true
     open-in-view: false
 
-api.token: ${JWT_SECRET:token-secret}
+api.token: ${TOKEN_SECRET:token-secret}
