--- a/backend/app/build.gradle
+++ b/backend/app/build.gradle
@@ -25,11 +25,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security' 
     implementation 'com.auth0:java-jwt:4.4.0'
     implementation 'at.favre.lib:bcrypt:0.10.1'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
     runtimeOnly 'com.mysql:mysql-connector-j'
+    runtimeOnly 'com.h2database:h2'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
